# quant-gru-pytouch

./: .clang-format  .gitignore  CMakeLists.txt  README.md
docker/: Dockerfile  docker-compose.yml
docs/: Process_GRU_Quant.md  分段线性量化完整指南.md  量化流程说明.md
example/: gru.cc  gru_tmp.cc
include/: GRUQuantWrapper.hpp  blas.h  checkData.hpp  devVector.h  device_assert.h  device_ptr.h  gru.h  gru_interface.hpp  gru_quant.h  gru_quantization_ranges.hpp  histogram_collector.hpp  inline_ops.h  parallelAlgorithm.h  pot_sqnr_calibrator.h  pot_sqnr_calibrator.hpp  quantize_bitwidth_config.hpp  quantize_ops.cuh  quantize_ops_helper.hpp  quantized_unit_testing.cuh  quantized_unit_testing.h
pytorch/: custom_gru.py  quant_gru.py  run_test.sh  setup.py  test_custom_gru_quantization.py  test_gru_train.py  test_quant_gru.py
pytorch/config/: README.md  gru_quant_bitwidth_config.json
pytorch/example/: example_usage.py
pytorch/lib/: gru_interface_binding.cc  gru_interface_binding.cpp
pytouch/: custom_gru.py  run.sh  run_test.sh  setup.py  test_custom_gru_quantization.py  test_gru_train.py  test_pytorch_gru.py
pytouch/lib/: GRUQuantWrapper.cpp  GRUQuantWrapper.hpp  gru_interface_binding.cpp
script/: download_dataset.py  pack_release.sh  test_intermediate_ops_bitwidth.sh  test_sigmoid_bitwidth_configs.sh  test_weight_activation_bitwidth.sh
src/: GRUQuantWrapper.cpp  gru.cc  gru_backward_gpu.cu  gru_calibrateGruScales.cpp  gru_forward_gpu.cu  gru_forward_gpu_quant.cu  gru_interface.cc  gru_interface.cpp  parallelAlgoithm.cu  parallelAlgorithm.cu  quantize_ops.cu
